Many changes (#18)
* remove env encrypted

* add price field to room resource

* unwrap field

* add missing size field

* add icon field to amenity

* add seeders

* fix migrations

* add filter route

* add rooms filter controller

* add rooms filter request

* add icon to amenity

* add size and rating fields

* change images output

* fix store booking request

* add media model

* add fields to room model

* change mediable config

* fix booking factory

* update room factory

* update docs
